[gd_scene load_steps=9 format=3 uid="uid://bwkqub4lys8ib"]

[ext_resource type="Script" path="res://src/ui/gui.gd" id="1_mlmj6"]
[ext_resource type="Texture2D" uid="uid://qxxoed2gmyh6" path="res://assets/textures/ui/GUISprite.png" id="1_ps6b8"]
[ext_resource type="Texture2D" uid="uid://cpvlglcc007lr" path="res://assets/textures/sanctuary/iglesia.png" id="3_sene8"]
[ext_resource type="FontFile" uid="uid://ct3ypufofw6dm" path="res://assets/fonts/Roboto-Bold.ttf" id="4_rrqhl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_j60wh"]
atlas = ExtResource("1_ps6b8")
region = Rect2(16, 16, 16, 16)
margin = Rect2(8, 8, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j5b36"]
bg_color = Color(0.402759, 0.657996, 0.602597, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.93045, 0.757758, 0.681826, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gwu04"]
bg_color = Color(0, 0, 0, 0.301961)
anti_aliasing_size = 0.625

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ucfb"]
bg_color = Color(0.403922, 0.658824, 0.603922, 1)
anti_aliasing_size = 0.625

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_mlmj6")

[node name="StatsContainer" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Life" type="TextureProgressBar" parent="StatsContainer"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(2.5, 2.5)
texture_under = SubResource("AtlasTexture_j60wh")

[node name="AmountOfLifes" type="Label" parent="StatsContainer"]
layout_mode = 0
offset_left = 65.0
offset_top = 27.0
offset_right = 105.0
offset_bottom = 50.0
text = "1"

[node name="Sanctuary" type="Sprite2D" parent="StatsContainer"]
position = Vector2(40, 90)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_sene8")

[node name="AmountOfSanctuaries" type="Label" parent="StatsContainer"]
layout_mode = 0
offset_left = 65.0
offset_top = 85.0
offset_right = 105.0
offset_bottom = 108.0
text = "0"

[node name="Panel" type="Panel" parent="StatsContainer"]
layout_mode = 0
offset_left = 10.0
offset_top = 135.0
offset_right = 85.0
offset_bottom = 188.0
theme_override_styles/panel = SubResource("StyleBoxFlat_j5b36")

[node name="LvlLabel" type="Label" parent="StatsContainer/Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 13.0
offset_right = 60.0
offset_bottom = 36.0
text = "Lv"

[node name="Lvl" type="Label" parent="StatsContainer/Panel"]
layout_mode = 0
offset_left = 45.0
offset_top = 13.0
offset_right = 85.0
offset_bottom = 36.0
text = "0"

[node name="ExpProgress" type="ProgressBar" parent="StatsContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 2.0
offset_top = 175.0
offset_right = 52.0
offset_bottom = 177.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_gwu04")
theme_override_styles/fill = SubResource("StyleBoxFlat_3ucfb")
max_value = 5.0
step = 1.0
show_percentage = false

[node name="Score" type="Label" parent="StatsContainer"]
layout_mode = 0
offset_left = 3.0
offset_top = 204.0
offset_right = 53.0
offset_bottom = 227.0
theme_override_colors/font_color = Color(0.705882, 0.466667, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("4_rrqhl")
text = "Score"
horizontal_alignment = 1

[node name="ScorePoints" type="Label" parent="StatsContainer"]
offset_left = 48.0
offset_top = 204.0
offset_right = 94.0
offset_bottom = 227.0
theme_override_colors/font_color = Color(0.705882, 0.466667, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("4_rrqhl")
text = "0"
horizontal_alignment = 1
